--- a/stocks/quotes/templates/add_stock.html
+++ b/stocks/quotes/templates/add_stock.html
@@ -1,15 +1,15 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h1>Add stock</h1>
+<h1>Add stock...</h1>
 
 <br />
 
 
 <form action="{% url 'add_stock' %}" class="d-flex" role="search" method="POST">
     {% csrf_token %}
-    <input class="form-control me-2" type="search" name="ticker" placeholder="Get stock quote" aria-label="Search">
-    <button class="btn btn-secondary" type="submit">Stock quote</button>
+    <input class="form-control me-2" type="search" name="ticker" placeholder="Add to portfolio" aria-label="Search">
+    <button class="btn btn-secondary" type="submit">Add stock</button>
 </form>
 
 <br />
